# oxide

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  cef.cmake  macros.cmake
client/idl/: test.idl
client/include/: client_app.hpp  client_handler.hpp
client/include/win/: resource.h
client/src/: client_app.cpp  client_handler.cpp  main.cpp
client/src/linux/: cefclient.cpp  client_handler.cpp
client/src/mac/: Info.plist  cefclient.mm  client_handler.mm  process_helper.cpp
client/src/mac/English.lproj/: InfoPlist.strings  MainMenu.xib
client/src/win/: cefclient.cpp  client_handler.cpp  oxide_client.aps  oxide_client.rc
cmake/Modules/: FindFlatBuffers.cmake
